# qoimage

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: pixel.cpp  pixel.hpp  qoimage.cpp  qoimage.hpp
src/tests/: main.cpp  test.cpp
